refactor to one folder, fix remove and update hub ACM installation
Change-Id: Ieeb9390077b8e1c4503310680290f647c5a40eca
Bug: 257135264

--- a/all-get-login-tokens.yml
+++ b/all-get-login-tokens.yml
@@ -16,7 +16,7 @@
   roles:
     - abm-login-token
   vars:
-    kubeconfig_shared_location: "/var/kubeconfig/kubeconfig"
+    kubeconfig_shared_location: "{{ abm_install_folder }}/kubeconfig/kubeconfig"
   tags:
     - hardware
 
@@ -24,6 +24,6 @@
   roles:
     - abm-login-token
   vars:
-    kubeconfig_shared_location: "/var/kubeconfig/kubeconfig"
+    kubeconfig_shared_location: "{{ abm_install_folder }}/kubeconfig/kubeconfig"
   tags:
     - cloud
