--- a/all-remove-abm-software.yml
+++ b/all-remove-abm-software.yml
@@ -5,7 +5,7 @@
 
 # NOTE: must specify `--tags never` on the CLI to run this
 
-- hosts: alll
+- hosts: all
   become: true
   become_user: root
   gather_facts: false
