--- a/roles/abm-post-install/vars/main.yml
+++ b/roles/abm-post-install/vars/main.yml
@@ -4,11 +4,8 @@ kube_ps1_version: "0.7.0"
 # NOTE Duplicate of google_tools vars
 abm_install_user: "el-gato"
 
-# Match with Google-Tools (by convention, not required, but good idea)
-remote_gsa_key: "/var/keys"
-
 # Configuration files for CloudOps Dashboards
-dashboard_config_base: "/var/abm-dashboards"
+dashboard_config_base: "{{ abm_install_folder }}/abm-dashboards"
 
 # Home directory for external secrets download and operations (duplidated from abm-software role)
-external_secrets_files: "/var/external-secrets"
+external_secrets_files: "{{ abm_install_folder }}/external-secrets"
