--- a/roles/abm-software/tasks/external-secrets.yaml
+++ b/roles/abm-software/tasks/external-secrets.yaml
@@ -17,7 +17,7 @@
 - name: "Create secret for External Secrets"
   shell: |
     kubectl create ns external-secrets || true
-    kubectl create secret generic gcp-store-creds --from-file=/var/keys/external-secrets-k8s-creds.json -n external-secrets || true
+    kubectl create secret generic gcp-store-creds --from-file={{ abm_install_folder }}/keys/external-secrets-k8s-creds.json -n external-secrets || true
     kubectl label secret gcp-store-creds -n external-secrets type=gcpsm --overwrite
   ignore_errors: yes
   environment:
