--- a/roles/abm-post-install/tasks/add-kube-ps1.yml
+++ b/roles/abm-post-install/tasks/add-kube-ps1.yml
@@ -2,7 +2,7 @@
 
   - name: Create directory for kube-ps1
     file:
-      path: '/var/kube-ps1'
+      path: '{{ tools_base_path}}/kube-ps1'
       state: directory
       mode: '0755'
       group: 'sudo'
@@ -15,9 +15,9 @@
   - name: Download kube-kube_ps1
     ansible.builtin.unarchive:
       src: "https://github.com/jonmosco/kube-ps1/archive/refs/tags/v{{ kube_ps1_version }}.tar.gz"
-      dest: /var/kube-ps1
+      dest: "{{ tools_base_path}}/kube-ps1"
       remote_src: yes
-      creates: "/var/kube-ps1/kube-ps1-{{ kube_ps1_version }}"
+      creates: "{{ tools_base_path}}/kube-ps1/kube-ps1-{{ kube_ps1_version }}"
     tags:
     - optional
     - kube-ps1
@@ -25,7 +25,7 @@
   - name: Add source of kube-ps1 to bashrc
     lineinfile:
       path: "/home/{{ item }}/.bashrc"
-      line: 'source "/var/kube-ps1/kube-ps1-{{ kube_ps1_version }}/kube-ps1.sh"'
+      line: 'source "{{ tools_base_path}}/kube-ps1/kube-ps1-{{ kube_ps1_version }}/kube-ps1.sh"'
     loop:
       - "{{ ansible_user }}"
       - "{{ abm_install_user }}"
