--- a/roles/pre-cache-binaries/tasks/main.yml
+++ b/roles/pre-cache-binaries/tasks/main.yml
@@ -8,10 +8,9 @@
   tags:
   - pre-cache-unbundle
 
-# TODO: Make this caching process more robust to check for folder or skip if not primary
 - name: Create a directory if it does not exist to keep ACM from failing
   ansible.builtin.file:
-    path: /var/acm-configs
+    path: "{{ acm_config_files }}"
     state: directory
     mode: '0755'
 
