--- a/roles/abm-software/tasks/config-root-repo-gcp-gsa.yaml
+++ b/roles/abm-software/tasks/config-root-repo-gcp-gsa.yaml
@@ -13,6 +13,7 @@
     - has_gsr_gsa.rc > 0
   tags:
   - acm-root-repo-gcp-gsa-method
+  - gcloud-command
 
 #### Setup WorkloadIdentity (supporting GSR)
 # https://cloud.google.com/anthos-config-management/docs/how-to/installing-kubectl#google-service-account
@@ -27,3 +28,4 @@
   - has_gsr_gsa.rc == 0
   tags:
   - acm-root-repo-gcp-gsa-method
+  - gcloud-mutate
