--- a/roles/decrypt-ssh-key/tasks/main.yml
+++ b/roles/decrypt-ssh-key/tasks/main.yml
@@ -22,6 +22,8 @@
   when:
     - primary_cluster_machine is defined
     - primary_cluster_machine == True
+  tags:
+  - gcloud-command
 
 - name: Extract decrypted key
   become: false
