chore: update control_plane_ip to node_ip
Change-Id: If9a0afde967e8a2f7295539b55c0f143f0133d39

--- a/inventory/host_vars/cnuc-2.yaml
+++ b/inventory/host_vars/cnuc-2.yaml
@@ -4,7 +4,7 @@ cluster_name: "cnuc-1"
 machine_label: "cnuc-2"
 
 # This machine's IP
-control_plane_ip: "10.200.0.3"
+node_ip: "10.200.0.3"
 
 # Ansible Pull Authenticaiton String
 ansible_pull_authentication_string: "{{scm_token_user}}:{{scm_token_token}}@"
