--- a/roles/ready-ubuntu/tasks/setup-ssh-pub-key-access.yml
+++ b/roles/ready-ubuntu/tasks/setup-ssh-pub-key-access.yml
@@ -80,8 +80,8 @@
   when:
     - (primary_cluster_machine is defined)
     - (primary_cluster_machine == true)
-    - (control_plane_ip != machine)
-  loop: "{{ control_plane_ips }}"
+    - (node_ip != machine)
+  loop: "{{ peer_node_ips }}"
   loop_control:
     loop_var: machine
   tags:
@@ -96,10 +96,10 @@
   when:
     - (primary_cluster_machine is defined)
     - (primary_cluster_machine == true)
-    - (control_plane_ip != machine)
+    - (node_ip != machine)
     - (is_cloud_resource is defined)
     - (is_cloud_resource == True)
-  loop: "{{ control_plane_ips }}"
+  loop: "{{ peer_node_ips }}"
   loop_control:
     loop_var: machine
   tags:
