--- a/inventory/host_vars/cnuc-1.yaml
+++ b/inventory/host_vars/cnuc-1.yaml
@@ -10,9 +10,9 @@ primary_cluster_machine: true
 # Name of the "store" per the ACM repo
 acm_cluster_name: "{{ lookup('env', 'CLUSTER_ACM_NAME') | default('location-2', True) }}"
 # This machine's IP
-control_plane_ip: "10.200.0.2"
+node_ip: "10.200.0.2"
 # The other IPs in the cluster
-control_plane_ips: [
+peer_node_ips: [
   "10.200.0.2",
   "10.200.0.3",
   "10.200.0.4"
