--- a/inventory/host_vars/edge-3.yaml
+++ b/inventory/host_vars/edge-3.yaml
@@ -4,7 +4,7 @@ cluster_name: "edge-1"
 machine_label: "edge-3"
 
 # This machine's IP address
-control_plane_ip: "192.168.3.13"
+node_ip: "192.168.3.13"
 
 # Ansible Pull Authenticaiton String
 ansible_pull_authentication_string: "{{scm_token_user}}:{{scm_token_token}}@"
