--- a/roles/abm-install/tasks/share-kubeconfig.yml
+++ b/roles/abm-install/tasks/share-kubeconfig.yml
@@ -17,13 +17,13 @@
   become_user: "{{ abm_install_user }}"
   command:
     cmd: "scp {{ abm_install_folder }}/bmctl-workspace/{{ cluster_name }}/{{ cluster_name }}-kubeconfig {{ abm_install_user }}@{{ machine }}:{{ kubeconfig_shared_location }}"
-  loop: "{{ control_plane_ips }}"
+  loop: "{{ peer_node_ips }}"
   loop_control:
     loop_var: machine
   when:
     - primary_cluster_machine is defined
     - primary_cluster_machine == True
-    - control_plane_ip != machine
+    - node_ip != machine
   tags:
   - abm-post-install
   - abm-install
