Root Reconsiler for 1.13 requires a suffix name and was left off during previous fixes
Change-Id: I26d0656b5b1cce3477650854b9085d3f7c311f3b

--- a/roles/abm-software/tasks/config-root-repo-gcp-gsa.yaml
+++ b/roles/abm-software/tasks/config-root-repo-gcp-gsa.yaml
@@ -22,7 +22,7 @@
   shell: |
     gcloud iam service-accounts add-iam-policy-binding \
         --role roles/iam.workloadIdentityUser \
-        --member "serviceAccount:{{ google_project_id }}.svc.id.goog[config-management-system/root-reconciler]" \
+        --member "serviceAccount:{{ google_project_id }}.svc.id.goog[config-management-system/root-reconciler-{{ primary_root_sync_name }}]" \
         {{ root_repository_service_account_email }}
   when:
   - has_gsr_gsa.rc == 0
