feat: add local command for prow linter
* Adds `make docker_lint` for local use
* Inital lint of a few files

Change-Id: Ia63e59eb3be1395bf907aec2d431cc837a34b874

--- a/roles/ready-ubuntu/tasks/main.yml
+++ b/roles/ready-ubuntu/tasks/main.yml
@@ -197,7 +197,7 @@
   - robin
 
 - name: Load tcm_loop kernel module
-  modprobe:
+  community.general.system.modprobe:
     name: tcm_loop
     state: present
   tags:
