--- a/roles/ready-ubuntu/tasks/setup-vlan-interfaces.yml
+++ b/roles/ready-ubuntu/tasks/setup-vlan-interfaces.yml
@@ -22,7 +22,7 @@
   - vlan-setup
 
 - name: Add VLAN interface 410 in linux
-  nmcli:
+  community.general.net_tools.nmcli:
     type: vlan
     conn_name: '{{ prinetint }}.410'
     method4: auto
